# Mastery-Ledger

./: .gitattributes  .gitignore  LINKVAULT_LEARNING_DESIGN_DECISIONS.md  MASTERY_LEDGER_CHATGPT_PORTABILITY_PLAN.md  MASTERY_LEDGER_DESIGN_DECISIONS.md  MASTERY_LEDGER_FOUR_AGENT_WORKFLOW_REFACTOR.md  MASTERY_LEDGER_FRONTEND_REDESIGN_PLAN.md  MASTERY_LEDGER_LESSON_AND_OUTPUT_CONTRACT_PLAN.md  MASTERY_LEDGER_PIPELINE_RECOVERY_PLAN.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-07-21T01-46-00-022Z.yml  page-2026-07-21T01-47-22-692Z.yml  page-2026-07-21T01-48-09-312Z.yml
demo/study-ledger-course/: README.md
linkvault-learning/: SKILL.md
linkvault-learning/agents/: openai.yaml
linkvault-learning/assets/: AGENTS.md.example  question-bank.json  review-decision.yaml  study.yaml  transcript.json
linkvault-learning/references/: linkvault-integration.md  mastery-model.md  runtime-portability.md  source-policy.md  topic-splitting-policy.md  video-transcript-contract.md
linkvault-learning/scripts/: aggregate_approved_evidence.py  download_media.py  validate_study_pack.py
linkvault-learning/tests/: test_media_tools.py  test_skill_structure.py
linkvault-learning/workflows/: ingest-material.md  intake-and-scope.md  orchestrate-research.md  process-video.md  research-topic.md
mastery-ledger/: SKILL.md
mastery-ledger-chatgpt/: SKILL.md
mastery-ledger-chatgpt/agents/: openai.yaml
mastery-ledger/agents/: openai.yaml
mastery-ledger/assets/: AGENTS.md.example  approved-claims.json  assessment-validation.json  citation-review.json  completion-envelope.json  contradiction-review.json  corpus-map.json  evidence-packet.json  exam.json  glossary.json  index.md  learner-progress.json  lesson.md  question-bank.json  question-bank.md  review-decision.yaml  run-plan.yaml  runtime-compatibility.json  source-candidate-ledger.json  source-manifest.yaml  source-record.example.yaml  study-guide.md  study.yaml  task-brief.yaml  wiki-page.md  wiki.json
mastery-ledger/references/: agent-role-profiles.json  agent-roles.md  artifact-lifecycle.md  assessment-contract.md  citation-contract.md  event-contract.md  lesson-contract.md  linkvault-connector.md  pedagogy.md  quality-rubric.md  runtime-portability.md  source-policy.md  task-and-evidence-contract.md  video-transcript-contract.md  worker-runtime-contract.md  workflow-reconciliation.md
mastery-ledger/scripts/: adopt_course.py  advance_workflow.py  aggregate_approved_evidence.py  build_exam.py  check_media_runtime.py  compile_worker_context.py  course_paths.py  create_assessment_plan.py  create_provided_evidence_plan.py  create_research_plan.py  create_source_discovery_plan.py  download_media.py  freeze_corpus_map.py  init_study.py  manage_worker_runtime.py  merge_worker_events.py  migrate_course_layout.py  normalize_subtitles.py  plan_store.py  promote_media_artifact.py  reconcile_workflow.py  record_action.py  record_calibration.py  record_scope_approval.py  register_source.py  render_question_bank.py  route_worker_completion.py  source_registry.py  transcribe_media.py  update_mastery.py  validate_evidence.py  validate_lesson.py  validate_orchestration.py  validate_study_pack.py  validation_receipts.py
packaging/: mastery-ledger.iss  mastery-ledger.spec
skill-build/: build_chatgpt_skill.py  chatgpt-single-file-build.json
skill-evals/: mastery-ledger-chatgpt-behavior-cases.md  mastery-ledger-chatgpt-manual-test-card.md
tests/: conftest.py  test_chatgpt_skill_packaging.py  test_course_import.py  test_desktop.py  test_packaging.py  test_runtime.py  test_update_service.py
web/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+110 files in other folders)
