[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastery-ledger"
version = "0.1.0"
description = "Local-first, source-grounded learning and long-term review workspace"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Howard Starfield" }]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/Howard-Starfield/Mastery-Ledger"
Repository = "https://github.com/Howard-Starfield/Mastery-Ledger"
Issues = "https://github.com/Howard-Starfield/Mastery-Ledger/issues"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
]

[project.scripts]
mastery-ledger = "mastery_ledger.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mastery_ledger = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "mastery-ledger/tests"]
addopts = "-ra"
