[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mastery-ledger"
version = "0.1.1"
description = "Build cited courses with Codex, then practice them in an offline exam app"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Howard Starfield" }]
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/Howard-Starfield/Mastery-Ledger"
Repository = "https://github.com/Howard-Starfield/Mastery-Ledger"
Issues = "https://github.com/Howard-Starfield/Mastery-Ledger/issues"

[project.optional-dependencies]
desktop = [
  "pywebview>=6.2,<7",
]
desktop-build = [
  "pyinstaller>=6,<7",
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
]
media = [
  "yt-dlp[default]>=2026.2.21,<2027",
]
transcription = [
  "faster-whisper>=1.1,<2",
]

[project.scripts]
mastery-ledger = "mastery_ledger.cli:main"
mastery-ledger-desktop = "mastery_ledger.desktop:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mastery_ledger = ["web/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "mastery-ledger/tests"]
addopts = "-ra"
